--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,9 @@
 #Grails Metadata file
-#Thu Nov 26 19:54:47 NPT 2015
+#Wed Dec 02 20:34:37 NPT 2015
 app.grails.version=1.3.7
 app.name=shop-demo
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.7
-#plugins.shopify-api=0.1
 plugins.tomcat=1.3.7
+plugins.wicket=1.5.2
